--- a/Latihan-Slider.html
+++ b/Latihan-Slider.html
@@ -1,58 +1,36 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tugas_1</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="tugas1.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="dist/slick-1.8.1/slick/slick.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="dist/slick-1.8.1/slick/slick-theme.css" />
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-
 <body>
-    <div id="tubuh">
 
-        <!-- sisi bagian kiri -->
-        <div id="sisi_kiri">
-            <img src="background1.jpg">
-        </div>
-
-        <!-- sisi bagian kanan -->
-        <div id="sisi_kanan">
-
-            <!-- Isi bagian kanan -->
-            <div id="isi_sisi_kanan">
-
-                <div id="sliderku">
-                    <img src="assets/img/slide1.jpg">
-                    <img src="assets/img/slide2.jpg">
-                    <img src="assets/img/slide3.jpg">
-                    <img src="assets/img/slide4.jpg">
-                    <img src="assets/img/slide5.jpg">
-                </div>
-
-
-            </div>
-            <!--penutup isi_sisi_kanan-->
-        </div>
-        <!--penutup sisi_kanan-->
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">WebSiteName</a>
     </div>
-    <!--penutup tubuh-->
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li class="active"><a href="#">Page 2</a></li>
+      <li><a href="#">Page 3</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+    </ul>
+  </div>
+</nav>
+  
+<div class="container">
+  <h3>Right Aligned Navbar</h3>
+  <p>The .navbar-right class is used to right-align navigation bar buttons.</p>
+</div>
 
-    <script src="jquery.js" type="text/javascript"></script>
-    <script src="dist/slick-1.8.1/slick/slick.min.js" type="text/javascript"></script>
-    <script type="text/javascript">
-        $(function () {
-            $("#sliderku").slick({
-                slidesToShow: 3,
-                slidesToScroll: 1,
-                autoplay: true,
-                autoplaySpeed: 2000
-            })
-        })
-    </script>
 </body>
-
 </html>
