--- a/index.html
+++ b/index.html
@@ -3,97 +3,66 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Beautiful Astronomy Pic's</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/custombootstrap.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="dist/Bootstrap/css/bootstrap.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="dist/slick-1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="dist/slick-1.8.1/slick/slick-theme.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="dist/Bootstrap/css/bootstrap.min.css" />
 </head>
 
 <body>
+  <ul>
+        <li><a class="active" href="#home">Home</a></li>
+        <li><a href="#galaxy">Galaxy</a></li>
+        <li><a href="#Milkyway">Milkyway</a></li>
+        <li><a href="#Nebulae">Nebulae</a></li>
+        <li><a href="#Solarsystem">Solarsystem</a></li>
+        <li><a href="#About">About</a></li>
+    </ul>
+    <h1>Beautifull Astronomy Pictures</h1>
+    <div class="flip">Click for further information</div>
+    <div class="panel">You can download all of the picture in this website for free, for some picture you need to give credits for</div>        
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container">
-          <a class="navbar-brand" href="#">Start Bootstrap</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Home
-                      <span class="sr-only">(current)</span>
-                    </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      
-      <header>
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner" role="listbox">
-            <!-- Slide One - Set the background image for this slide in the line below -->
-            <div class="carousel-item active" style="background-im">
-              <div class="carousel-caption d-none d-md-block">
-                <h3 class="display-4">First Slide</h3>
-                <p class="lead">This is a description for the first slide.</p>
-              </div>
-            </div>
-            <!-- Slide Two - Set the background image for this slide in the line below -->
-            <div class="carousel-item" style="background-image: url('https://source.unsplash.com/wfh8dDlNFOk/1920x1080')">
-              <div class="carousel-caption d-none d-md-block">
-                <h3 class="display-4">Second Slide</h3>
-                <p class="lead">This is a description for the second slide.</p>
-              </div>
-            </div>
-            <!-- Slide Three - Set the background image for this slide in the line below -->
-            <div class="carousel-item" style="background-image: url('https://source.unsplash.com/O7fzqFEfLlo/1920x1080')">
-              <div class="carousel-caption d-none d-md-block">
-                <h3 class="display-4">Third Slide</h3>
-                <p class="lead">This is a description for the third slide.</p>
-              </div>
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
-        </div>
-      </header>
-      
-      <!-- Page Content -->
-      <section class="py-5">
-        <div class="container">
-          <h1 class="display-4">Half Page Image Slider</h1>
-          <p class="lead">The background images for the slider are set directly in the HTML using inline CSS. The images in this snippet are from <a href="https://unsplash.com">Unsplash</a>!</p>
-        </div>
-      </section>
+  <div class="grid-container">
+    <div class="grid-item item1">
+    </div>
 
+    <div class="grid-item item2">
+      <div class="galaxy">
+        <img src="assets/img/Earth from Sky1.jpg">
+        <img src="assets/img/Earth from Sky2.jpg">
+        <img src="assets/img/Earth from Sky3.jpg">
+        <img src="assets/img/Earth from Sky4.jpg">
+        <img src="assets/img/Earth from Sky5 palebluedot.jpg">
+    </div>
+
+    </div>  
+    <div class="grid-item item4">3</div>
+    <div class="grid-item item5">4</div>
+    <div class="grid-item item5">5</div>
+  </div>
+  
 
 
     <script src="dist/jquery/jquery.js"></script>
+    <script src="dist/Bootstrap/js/bootstrap.min.js"></script>
     <script src="dist/Popper/popper.js"></script>
-    <script src="dist/Bootstrap/js/bootstrap.js"></script>
-    <script src="assets/css/custombootstrap.js"></script>
-</body>
+    <script type="text/javascript" src="dist/slick-1.8.1/slick/slick.min.js"></script>
+
+<script type="text/javascript">
+      $(document).ready(function () {
+        $('.galaxy').slick({
+            slidesToShow: 3,
+            slidesToScroll: 1,
+            autoplay : true,
+            autoplaySpeed: 2000,
+            });
+        $('.flip').click(function(){
+          $('.panel').slideToggle('slow');});
+      });
+  </script>
+
+
+  </body>
 </html>
